<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.robin.calculator.MainActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text=""
            android:layout_below="@+id/tvInput" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvOutput"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn7"
            android:layout_below="@+id/tvOutput" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tvOutput"
            android:layout_below="@+id/tvOutput"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:text="@string/btnDivision" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOutput"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_toEndOf="@+id/btn8"
            android:layout_below="@+id/tvOutput"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/btn7"
            android:layout_below="@+id/btn7"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/btn8"
            android:layout_below="@+id/btn8"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/btn9"
            android:layout_alignEnd="@+id/btn9"
            android:layout_below="@+id/btn9"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@id/btnDivision"
            android:layout_below="@+id/btnDivision"
            android:text="@string/btnMul" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/btn4"
            android:layout_alignEnd="@+id/btn4"
            android:layout_below="@+id/btn4"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/btn5"
            android:layout_alignStart="@+id/btn5"
            android:layout_below="@+id/btn5"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/btn6"
            android:layout_alignEnd="@+id/btn6"
            android:layout_below="@+id/btn6"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/btnMul"
            android:layout_alignStart="@+id/btnMul"
            android:layout_below="@+id/btnMul"
            android:text="@string/btnMinus" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/btn1"
            android:layout_alignEnd="@+id/btn1"
            android:layout_below="@+id/btn1"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/btn2"
            android:layout_alignStart="@+id/btn2"
            android:layout_below="@+id/btn2"
            android:text="@string/btnPoint" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/btn3"
            android:layout_alignStart="@+id/btn3"
            android:layout_below="@+id/btn3"
            android:text="@string/btnEqual" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/btnMinus"
            android:layout_alignStart="@+id/btnMinus"
            android:layout_below="@+id/btnMinus"
            android:text="@string/btnPlus" />

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn0"
            android:layout_alignStart="@+id/btn0"
            android:layout_alignEnd="@+id/btn0"
            android:layout_marginTop="10dp"
            android:text="@string/btnc" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
